# TwitchChannelPointManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.json
custom_html/: README.txt
doc/: basicdesign.md  detaildesign.md  requirements.md  testspecification.md
ranking/: README.txt  default.html
src/: db_viewer_main.cpp  main.cpp
src/core/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  Constants.hpp  HTMLSanitizer.cpp  HTMLSanitizer.hpp  Logger.cpp  Logger.hpp  ServerCipherEngine.cpp  ServerCipherEngine.hpp  TranslationReviewer.cpp  TranslationReviewer.hpp
src/database/: Database.cpp  Database.hpp
src/gui/: DashboardWidget.cpp  DashboardWidget.hpp  MainWindow.cpp  MainWindow.hpp  RewardEditorWidget.cpp  RewardEditorWidget.hpp  SettingsWidget.cpp  SettingsWidget.hpp  StatisticsWidget.cpp  StatisticsWidget.hpp
src/gui/standalone/: DbViewerWindow.cpp  DbViewerWindow.hpp
src/overlay/: FileManager.cpp  FileManager.hpp  OverlayServer.cpp  OverlayServer.hpp
src/reward/: QueueManager.cpp  QueueManager.hpp  Reward.hpp  RewardManager.cpp  RewardManager.hpp
src/test/: MockNetworkAccessManager.hpp  test_main.cpp
src/twitch/: TwitchAuth.cpp  TwitchAuth.hpp  TwitchEventSub.cpp  TwitchEventSub.hpp
translations/: app_de.ts  app_en.ts  app_es.ts  app_fr.ts  app_pt.ts
